# CREST-CV-Pathing

./: CMakeLists.txt  README.md  boat_controller.py  boat_controller_oc.py  get_obstacle_dist.py  objectdetectionBirdseye.py  test_file.py
data/: camera_calibration.conf
ogl_viewer/: viewer.py
src/: depth_wrapper.cpp  zed_oc_depth_blur.cpp
